; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_menu_pico.c_mh_opt_misc.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/PicoDrive/platform/common/extr_menu_pico.c_mh_opt_misc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PsndRate = common dso_local global i32 0, align 4
@PBTN_RIGHT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @mh_opt_misc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mh_opt_misc(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %3, align 4
  switch i32 %5, label %17 [
    i32 128, label %6
    i32 129, label %12
  ]

6:                                                ; preds = %2
  %7 = load i32, i32* @PsndRate, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @PBTN_RIGHT, align 4
  %10 = and i32 %8, %9
  %11 = call i32 @sndrate_prevnext(i32 %7, i32 %10)
  store i32 %11, i32* @PsndRate, align 4
  br label %18

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @PBTN_RIGHT, align 4
  %15 = and i32 %13, %14
  %16 = call i32 @region_prevnext(i32 %15)
  br label %18

17:                                               ; preds = %2
  br label %18

18:                                               ; preds = %17, %12, %6
  ret i32 0
}

declare dso_local i32 @sndrate_prevnext(i32, i32) #1

declare dso_local i32 @region_prevnext(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
